--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<!-- hack iOS CSS :active style -->
+<body ontouchstart="">
 
-    {% include header.html %}
+    {% include nav.html %}
 
-    <div class="page-content">
-        {{ content }}
-    </div>
+    {{ content }}
 
-  </body>
+    {% include footer.html %}
+
+
+<!-- Image to hack wechat -->
+<img src="/img/icon_wechat.png" width="0" height="0" />
+<!-- Migrate from head to bottom, no longer block render and still work -->
+
+</body>
 
 </html>
